# ROS_bid_white_bot

./: .gitignore  colcon_build.sh  index.html  rosbridge_launch.sh
src/bid_wb_interfaces/: CMakeLists.txt  package.xml
src/bid_wb_interfaces/action/: InverseKinematic.action
src/bid_wb_interfaces/msg/: CurrentState.msg  TargetInfo.msg
src/controller/: package.xml  setup.py
src/controller/controller/: inverse_kinematic_action.py  inverse_kinematic_calculator.py  router.py
src/controller/launch/: launch_controller.xml
